--- a/admin/jsonConfig.json
+++ b/admin/jsonConfig.json
@@ -8,7 +8,7 @@
 			"newLine": true
 		},
 		"serverPort": {
-			"type": "text",
+			"type": "number",
 			"label": "serverPort",
 			"newLine": true
 		},
