--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "node": ">= 16"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^2.6.7"
+    "@iobroker/adapter-core": "^2.6.7",
+    "net": "^1.0.2"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.5.9",
